--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,11 @@
       <h2 class="holder headline">Weather Journal App</h2>
       <div class="holder zip">
         <label for="zip">Enter Zipcode here</label>
-        <input type="number" id="zip" placeholder="Enter zip code here" />
+        <input
+          type="number"
+          id="zip"
+          placeholder="Enter zip code here e.g 19040"
+        />
       </div>
       <div class="holder feel">
         <div>
@@ -24,7 +28,7 @@
           <textarea
             class="myInput"
             id="feelings"
-            placeholder="Enter your feelings here"
+            placeholder="Enter your feelings here e.g good, bad"
             rows="8"
             cols="50"
           ></textarea>
